컨트롤러와 타입 생성

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "build": "next build --turbopack",
         "start": "next start",
         "lint": "eslint",
+        "openapi-ts": "openapi-ts",
         "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
     },
     "dependencies": {
@@ -68,6 +69,8 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@hey-api/client-next": "^0.5.1",
+        "@hey-api/openapi-ts": "^0.87.2",
         "@tailwindcss/postcss": "^4",
         "@types/node": "^20",
         "@types/react": "^19",
